Fri Mar 18 21:58:58 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/h.xsl:
        * tools/modeling/tests/Comments/Comments.opendds:

          Output comments from DCPSlib in _T.h

Fri Mar 18 20:38:52 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/common.xsl:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/idl.xsl:

          Output comments in IDL.

        * tools/modeling/tests/Comments:
        * tools/modeling/tests/Comments/Comments.codegen:
        * tools/modeling/tests/Comments/Comments.mpc:
        * tools/modeling/tests/Comments/Comments.mwc:
        * tools/modeling/tests/Comments/Comments.opendds:
        * tools/modeling/tests/Comments/publisher.cpp:
        * tools/modeling/tests/Comments/subscriber.cpp:
        * tools/modeling/tests/modeling_tests.lst:

          New test case with comments in datalib.

Fri Mar 18 17:57:29 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.common/src/org/opendds/modeling/common/gmf/ElementCommentPropertySection.java:

          Copied EFactory used for Comment creation used in 1st version of this file
          into this version so comments will persist after the comment field looses
          focus.

Fri Mar 18 16:01:00 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DataLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/PolicyLib.gmfgen:

          Change diagram editor ID to be what was the default value when using
          the package name prefix org.opendds.modeling.model.opendds.diagram.<lib>.
          This will allow existing model diagrams to open without error.
